org/force-app/main/default/objects/Account/fields/AccountManager__c.field-meta.xml
<CustomField>
    <fullName>AccountManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gerente da conta</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountManager</relationshipName>
    <type>Lookup</type>
</CustomField>