org/force-app/main/default/objects/Account/fields/AddressExternalId__c.field-meta.xml
<CustomField>
    <fullName>AddressExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Código externo do endereço</label>
    <length>80</length>
    <type>Text</type>
</CustomField>