org/force-app/main/default/objects/Account/fields/AverageInstallRate__c.field-meta.xml
<CustomField>
    <fullName>AverageInstallRate__c</fullName>
    <label>Velocidade máxima atendida</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>700Mb</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>