org/force-app/main/default/objects/Account/fields/BillingAddressComplement__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressComplement__c</fullName>
    <label>Complemento (cobrança)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>