org/force-app/main/default/objects/Account/fields/BillingAddressId__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressId__c</fullName>
    <externalId>true</externalId>
    <label>BillingAddressId</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>