org/force-app/main/default/objects/Account/fields/BillingAddressNumber__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressNumber__c</fullName>
    <label>Número endereço (Cobrança)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>