org/force-app/main/default/objects/Account/fields/BillingDistrict__c.field-meta.xml
<CustomField>
    <fullName>BillingDistrict__c</fullName>
    <label>Bairro (faturamento)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>