org/force-app/main/default/objects/Account/fields/BillingObservations__c.field-meta.xml
<CustomField>
    <fullName>BillingObservations__c</fullName>
    <label>Observações endereço (Cobrança)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>