org/force-app/main/default/objects/Account/fields/birthDate__c.field-meta.xml
<CustomField>
    <fullName>birthDate__c</fullName>
    <label>Data de aniversário</label>
    <type>Date</type>
</CustomField>