org/force-app/main/default/objects/Account/fields/ByPassStamp__c.field-meta.xml
<CustomField>
    <fullName>ByPassStamp__c</fullName>
    <description>Used to bypass some rules when necessary.</description>
    <inlineHelpText>DO NOT ADD THIS TO THE LAYOUT.</inlineHelpText>
    <label>ByPassStamp</label>
    <type>DateTime</type>
</CustomField>