org/force-app/main/default/objects/Account/fields/ClientGroup__c.field-meta.xml
<CustomField>
    <fullName>ClientGroup__c</fullName>
    <label>Grupo Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B2B - Corporativo</fullName>
            </value>
            <value>
                <fullName>B2W - Operadoras</fullName>
            </value>
            <value>
                <fullName>B2G - Governo</fullName>
            </value>
            <value>
                <fullName>B2W - Provedores</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>