org/force-app/main/default/objects/Account/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <formula>IF(NOT(ISBLANK(TEXT(ClusterManual__c))), TEXT(ClusterManual__c), TEXT(CreatedBy.Cluster__c))</formula>
    <label>Time/Cluster</label>
    <type>Text</type>
</CustomField>