org/force-app/main/default/objects/Account/fields/ClusterManual__c.field-meta.xml
<CustomField>
    <fullName>ClusterManual__c</fullName>
    <inlineHelpText>Necessário preencher quando o usuário não tiver este campo cadastrado.</inlineHelpText>
    <label>Time / Cluster</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time_Cluster</valueSetName>
    </valueSet>
</CustomField>