org/force-app/main/default/objects/Account/fields/CompanySAPCode__c.field-meta.xml
<CustomField>
    <fullName>CompanySAPCode__c</fullName>
    <label>Código SAP da Empresa do Grupo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0200</fullName>
            </value>
            <value>
                <fullName>A201</fullName>
                <default>true</default>
                <label>A201</label>
            </value>
            <value>
                <fullName>A202</fullName>
            </value>
            <value>
                <fullName>A203</fullName>
            </value>
            <value>
                <fullName>A204</fullName>
            </value>
            <value>
                <fullName>A205</fullName>
            </value>
            <value>
                <fullName>A207</fullName>
            </value>
            <value>
                <fullName>A208</fullName>
            </value>
            <value>
                <fullName>A209</fullName>
            </value>
            <value>
                <fullName>A211</fullName>
            </value>
            <value>
                <fullName>A212</fullName>
            </value>
            <value>
                <fullName>A213</fullName>
            </value>
            <value>
                <fullName>A214</fullName>
            </value>
            <value>
                <fullName>A215</fullName>
            </value>
            <value>
                <fullName>A216</fullName>
            </value>
            <value>
                <fullName>A217</fullName>
            </value>
            <value>
                <fullName>A218</fullName>
            </value>
            <value>
                <fullName>A219</fullName>
            </value>
            <value>
                <fullName>A220</fullName>
            </value>
            <value>
                <fullName>A221</fullName>
            </value>
            <value>
                <fullName>A222</fullName>
            </value>
            <value>
                <fullName>A223</fullName>
            </value>
            <value>
                <fullName>A224</fullName>
            </value>
            <value>
                <fullName>A225</fullName>
            </value>
            <value>
                <fullName>A228</fullName>
            </value>
            <value>
                <fullName>A229</fullName>
            </value>
            <value>
                <fullName>A230</fullName>
            </value>
            <value>
                <fullName>A231</fullName>
            </value>
            <value>
                <fullName>A232</fullName>
            </value>
            <value>
                <fullName>A233</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>