org/force-app/main/default/objects/Account/fields/CreditAnalysisDescription__c.field-meta.xml
<CustomField>
    <fullName>CreditAnalysisDescription__c</fullName>
    <label>Descrição da análise de crédito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>