org/force-app/main/default/objects/Account/fields/CreditProfile__c.field-meta.xml
<CustomField>
    <fullName>CreditProfile__c</fullName>
    <label>Pendência financeira</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Débito interno</fullName>
            </value>
            <value>
                <fullName>Elegível</fullName>
            </value>
            <value>
                <fullName>Não Elegível</fullName>
            </value>
            <value>
                <fullName>Possui debito interno</fullName>
            </value>
            <value>
                <fullName>Elegivel</fullName>
                <label>Cliente elegível</label>
            </value>
            <value>
                <fullName>Nao Elegivel</fullName>
                <label>Cliente não elegível</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>