org/force-app/main/default/objects/Account/fields/DocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>DocumentNumber__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Campo precisa ter o formato de CPF ou CNPJ.
Ex: 123.456.789-10
01.234.567/8910-12</inlineHelpText>
    <label>CPF/CNPJ</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>