org/force-app/main/default/objects/Account/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <formula>CASE( RecordType.DeveloperName, &apos;Individual&apos;, &apos;CPF&apos;, &apos;LegalEntity&apos;, &apos;CNPJ&apos;,&apos;&apos;)</formula>
    <label>Tipo de documento</label>
    <type>Text</type>
</CustomField>