org/force-app/main/default/objects/Account/fields/EconomicActivity__c.field-meta.xml
<CustomField>
    <fullName>EconomicActivity__c</fullName>
    <label>Atividade econômica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>