org/force-app/main/default/objects/Account/fields/EconomicGroup__c.field-meta.xml
<CustomField>
    <fullName>EconomicGroup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Grupo econômico</label>
    <referenceTo>EconomicGroup__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>AccountsEconomicGroup</relationshipName>
    <type>Lookup</type>
</CustomField>