org/force-app/main/default/objects/Account/fields/EntryChannel__c.field-meta.xml
<CustomField>
    <fullName>EntryChannel__c</fullName>
    <label>Origem do Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
            <value>
                <fullName>Indicação</fullName>
            </value>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
            <value>
                <fullName>Unidades</fullName>
            </value>
            <value>
                <fullName>Vendas Porta à Porta Terceiros</fullName>
            </value>
            <value>
                <fullName>Fidelização</fullName>
            </value>
            <value>
                <fullName>Vendas Digitais Terceiros</fullName>
            </value>
            <value>
                <fullName>Amigo Perto (Agente Autorizado)</fullName>
            </value>
            <value>
                <fullName>PaP Terceiros</fullName>
            </value>
            <value>
                <fullName>RD02</fullName>
            </value>
            <value>
                <fullName>Terceiro Digital</fullName>
            </value>
            <value>
                <fullName>Callcenter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>