org/force-app/main/default/objects/Account/fields/FantasyName__c.field-meta.xml
<CustomField>
    <fullName>FantasyName__c</fullName>
    <label>Nome fantasia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>