org/force-app/main/default/objects/Account/fields/Geolocalization__c.field-meta.xml
<CustomField>
    <fullName>Geolocalization__c</fullName>
    <label>Geolocalização</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>