org/force-app/main/default/objects/Account/fields/GroupCompany__c.field-meta.xml
<CustomField>
    <fullName>GroupCompany__c</fullName>
    <label>Empresa do grupo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amigo BST</fullName>
                <default>true</default>
                <label>Amigo BST</label>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>