org/force-app/main/default/objects/Account/fields/IndicatedBy__c.field-meta.xml
<CustomField>
    <fullName>IndicatedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Indicado por</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>Vendedor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>IndicatedBy</relationshipName>
    <type>Lookup</type>
</CustomField>