org/force-app/main/default/objects/Account/fields/InscricaoEstadual__c.field-meta.xml
<CustomField>
    <fullName>InscricaoEstadual__c</fullName>
    <label>Inscrição Estadual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>