org/force-app/main/default/objects/Account/fields/IntegrationPerformed__c.field-meta.xml
<CustomField>
    <fullName>IntegrationPerformed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integração realizada</label>
    <type>Checkbox</type>
</CustomField>