org/force-app/main/default/objects/Account/fields/LastValidDocument__c.field-meta.xml
<CustomField>
    <fullName>LastValidDocument__c</fullName>
    <label>Última verificação financeira</label>
    <type>DateTime</type>
</CustomField>