org/force-app/main/default/objects/Account/fields/LatitudeValue__c.field-meta.xml
<CustomField>
    <fullName>LatitudeValue__c</fullName>
    <formula>ShippingLatitude</formula>
    <label>Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>