org/force-app/main/default/objects/Account/fields/LongitudeValue__c.field-meta.xml
<CustomField>
    <fullName>LongitudeValue__c</fullName>
    <formula>ShippingLongitude</formula>
    <label>Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>