org/force-app/main/default/objects/Account/fields/MainAccount__c.field-meta.xml
<CustomField>
    <fullName>MainAccount__c</fullName>
    <formula>ISBLANK(ParentId)</formula>
    <label>Conta principal</label>
    <type>Checkbox</type>
</CustomField>