org/force-app/main/default/objects/Account/fields/MainPartner__c.field-meta.xml
<CustomField>
    <fullName>MainPartner__c</fullName>
    <label>Sócio principal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>