org/force-app/main/default/objects/Account/fields/Management__c.field-meta.xml
<CustomField>
    <fullName>Management__c</fullName>
    <label>Gerência</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DMR - Gerencia de Mercado Residencial</fullName>
            </value>
            <value>
                <fullName>102</fullName>
                <label>CENTRO OESTE Residencial</label>
            </value>
            <value>
                <fullName>101</fullName>
                <label>SUL Residencial</label>
            </value>
            <value>
                <fullName>103</fullName>
                <label>SUDESTE Residencial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>