org/force-app/main/default/objects/Account/fields/MarketSegment__c.field-meta.xml
<CustomField>
    <fullName>MarketSegment__c</fullName>
    <label>Segmento de Mercado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Segmento Residencial</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Pequenas e Médias Empresas</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Micro e Pequenas Empresas</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Grandes Contas</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Segmento Empresarial</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Governo</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Provedores de Internet</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Grandes operadoras</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Segmento Residencial Rural</label>
            </value>
            <value>
                <fullName>Residencial</fullName>
            </value>
            <value>
                <fullName>Residencial Rural</fullName>
            </value>
            <value>
                <fullName>Empresarial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>