org/force-app/main/default/objects/Account/fields/MarketType__c.field-meta.xml
<CustomField>
    <fullName>MarketType__c</fullName>
    <label>Tipo de Mercado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporativo</fullName>
            </value>
            <value>
                <fullName>Atacado</fullName>
            </value>
            <value>
                <fullName>Varejo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>