org/force-app/main/default/objects/Account/fields/NetworkType__c.field-meta.xml
<CustomField>
    <fullName>NetworkType__c</fullName>
    <label>Tipo de rede</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Própria</fullName>
            </value>
            <value>
                <fullName>Neutra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>