org/force-app/main/default/objects/Account/fields/OperatingUnit__c.field-meta.xml
<CustomField>
    <fullName>OperatingUnit__c</fullName>
    <label>Unidade Operacional</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>896</fullName>
                <label>AMIGO MS CXM</label>
            </value>
            <value>
                <fullName>AMIGO MS KCA</fullName>
            </value>
            <value>
                <fullName>AMIGO MS PDG</fullName>
            </value>
            <value>
                <fullName>AMIGO MS RVG</fullName>
            </value>
            <value>
                <fullName>AMIGO MS SWZ</fullName>
            </value>
            <value>
                <fullName>AMIGO MS SYW</fullName>
            </value>
            <value>
                <fullName>886</fullName>
                <label>AMIGO MT AFL</label>
            </value>
            <value>
                <fullName>AMIGO MT ALT</fullName>
            </value>
            <value>
                <fullName>AMIGO MT ALU</fullName>
            </value>
            <value>
                <fullName>876</fullName>
                <label>AMIGO MT CBA</label>
            </value>
            <value>
                <fullName>AMIGO MT CDZ</fullName>
            </value>
            <value>
                <fullName>AMIGO MT CGI</fullName>
            </value>
            <value>
                <fullName>AMIGO MT CZV</fullName>
            </value>
            <value>
                <fullName>AMIGO MT DQN</fullName>
            </value>
            <value>
                <fullName>AMIGO MT FZNL</fullName>
            </value>
            <value>
                <fullName>AMIGO MT GDN</fullName>
            </value>
            <value>
                <fullName>AMIGO MT GGA</fullName>
            </value>
            <value>
                <fullName>AMIGO MT ITQ</fullName>
            </value>
            <value>
                <fullName>AMIGO MT IUZ</fullName>
            </value>
            <value>
                <fullName>AMIGO MT JCR</fullName>
            </value>
            <value>
                <fullName>AMIGO MT JIA</fullName>
            </value>
            <value>
                <fullName>AMIGO MT LRV</fullName>
            </value>
            <value>
                <fullName>AMIGO MT MTK</fullName>
            </value>
            <value>
                <fullName>AMIGO MT PNE</fullName>
            </value>
            <value>
                <fullName>AMIGO MT PVT</fullName>
            </value>
            <value>
                <fullName>AMIGO MT PXP</fullName>
            </value>
            <value>
                <fullName>AMIGO MT PXZ</fullName>
            </value>
            <value>
                <fullName>AMIGO MT ROI - La Salle II</fullName>
            </value>
            <value>
                <fullName>AMIGO MT SNO</fullName>
            </value>
            <value>
                <fullName>AMIGO MT TDN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>