org/force-app/main/default/objects/Account/fields/OptInWhatsApp__c.field-meta.xml
<CustomField>
    <fullName>OptInWhatsApp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OptInWhatsApp</label>
    <type>Checkbox</type>
</CustomField>