org/force-app/main/default/objects/Account/fields/ProductInterest__c.field-meta.xml
<CustomField>
    <fullName>ProductInterest__c</fullName>
    <label>Produto de interesse</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fibra</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>TelefoniaMovel</fullName>
                <label>Telefonia móvel</label>
            </value>
            <value>
                <fullName>CamerasSegurança</fullName>
                <label>Câmeras de segurança</label>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>