org/force-app/main/default/objects/Account/fields/RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeName__c</fullName>
    <formula>RecordType.Name</formula>
    <label>Tipo da Conta</label>
    <type>Text</type>
</CustomField>