org/force-app/main/default/objects/Account/fields/Regional__c.field-meta.xml
<CustomField>
    <fullName>Regional__c</fullName>
    <label>Regional</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>144_146</fullName>
                <label>AMIGO PERTO RS</label>
            </value>
            <value>
                <fullName>142</fullName>
                <label>CENTRO CO</label>
            </value>
            <value>
                <fullName>146</fullName>
                <label>FRONTEIRA</label>
            </value>
            <value>
                <fullName>144</fullName>
                <label>METROPOLITANA</label>
            </value>
            <value>
                <fullName>141</fullName>
                <label>NORTE CO</label>
            </value>
            <value>
                <fullName>Regional Fronteira IS RS</fullName>
            </value>
            <value>
                <fullName>147</fullName>
                <label>RIO DE JANEIRO</label>
            </value>
            <value>
                <fullName>148</fullName>
                <label>SAO PAULO</label>
            </value>
            <value>
                <fullName>145</fullName>
                <label>SERRA</label>
            </value>
            <value>
                <fullName>143</fullName>
                <label>SUL CO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>