org/force-app/main/default/objects/Account/fields/RestartSale__c.field-meta.xml
<CustomField>
    <fullName>RestartSale__c</fullName>
    <label>Retomar Venda</label>
    <type>Url</type>
</CustomField>