org/force-app/main/default/objects/Account/fields/SalesSupplier__c.field-meta.xml
<CustomField>
    <fullName>SalesSupplier__c</fullName>
    <label>Fornecedor de venda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>ANTONIO CARLOS BITENCOURT RIBEIRO</fullName>
            </value>
            <value>
                <fullName>ELEVARE SERVICOS EM TELEFONIA LTDA</fullName>
            </value>
            <value>
                <fullName>FG TELECOM LTDA</fullName>
            </value>
            <value>
                <fullName>FIDELIZAÇAO CO</fullName>
            </value>
            <value>
                <fullName>FIDELIZAÇAO RJ</fullName>
            </value>
            <value>
                <fullName>FIDELIZAÇAO RS</fullName>
            </value>
            <value>
                <fullName>FIDELIZAÇAO SP</fullName>
            </value>
            <value>
                <fullName>INSIDE CO</fullName>
            </value>
            <value>
                <fullName>INSIDE RJ</fullName>
            </value>
            <value>
                <fullName>INSIDE RS</fullName>
            </value>
            <value>
                <fullName>INSIDE SP</fullName>
            </value>
            <value>
                <fullName>MORAES E SILVA LTDA</fullName>
            </value>
            <value>
                <fullName>PVT BR JOY TELECOM LTDA</fullName>
            </value>
            <value>
                <fullName>PVT BR MUNDIALE TECNOLOGIA DA INFOR LTDA</fullName>
            </value>
            <value>
                <fullName>PVT BR UPWT SERVICOS TIAGO D PORTA</fullName>
            </value>
            <value>
                <fullName>PVT CO ALPHA LOCACAO VENDA IMOVEIS LTDA</fullName>
            </value>
            <value>
                <fullName>PVT CO AVILA CABRERA DA SILVA</fullName>
            </value>
            <value>
                <fullName>PVT CO E. DE SOUZA &amp; CIA LTDA</fullName>
            </value>
            <value>
                <fullName>PVT CO EMMANUEL LUIZ DA SILVA</fullName>
            </value>
            <value>
                <fullName>PVT CO FLEX TELHAS ISOTERMICAS LTDA</fullName>
            </value>
            <value>
                <fullName>PVT CO FORBS COM E SERV DE COMUN LTDA</fullName>
            </value>
            <value>
                <fullName>PVT CO HIGOR FELIPE DE MORAES LTDA</fullName>
            </value>
            <value>
                <fullName>PVT CO INFINITY APARECIDA ALVES DE PAULA</fullName>
            </value>
            <value>
                <fullName>PVT CO J RICHARD GOMES REPRESENTACAO LTD</fullName>
            </value>
            <value>
                <fullName>PVT CO JHONATAM LUIZ DE LIMA SILVA</fullName>
            </value>
            <value>
                <fullName>PVT CO JORNET NEGOCIOS E SERVICOS LTDA</fullName>
            </value>
            <value>
                <fullName>PVT CO JUNIOR NEGOCIOS LTDA</fullName>
            </value>
            <value>
                <fullName>PVT CO LIDIANA MITEV DE LIMA</fullName>
            </value>
            <value>
                <fullName>PVT CO LOG TELECOM SERVICOS DE COMUN LTD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>