org/force-app/main/default/objects/Account/fields/SecondaryCellphone__c.field-meta.xml
<CustomField>
    <fullName>SecondaryCellphone__c</fullName>
    <label>Celular Secundário</label>
    <type>Phone</type>
</CustomField>