org/force-app/main/default/objects/Account/fields/ServiceFeasibility__c.field-meta.xml
<CustomField>
    <fullName>ServiceFeasibility__c</fullName>
    <label>Viabilidade de atendimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Viavel</fullName>
                <label>Viável</label>
            </value>
            <value>
                <fullName>Parcialmente viavel</fullName>
                <label>Parcialmente viável</label>
            </value>
            <value>
                <fullName>Nao viavel</fullName>
                <label>Não viável</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>