org/force-app/main/default/objects/Account/fields/ServiceTerritory__c.field-meta.xml
<CustomField>
    <fullName>ServiceTerritory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Território de serviço</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Contas</relationshipLabel>
    <relationshipName>Contas</relationshipName>
    <type>Lookup</type>
</CustomField>