org/force-app/main/default/objects/Account/fields/ShippingAddressComplement__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddressComplement__c</fullName>
    <label>Complemento (entrega)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>