org/force-app/main/default/objects/Account/fields/ShippingAddressId__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddressId__c</fullName>
    <externalId>true</externalId>
    <label>ShippingAddressId</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>