org/force-app/main/default/objects/Account/fields/ShippingAddressNumber__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddressNumber__c</fullName>
    <label>Número endereço (Instalação)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>