org/force-app/main/default/objects/Account/fields/ShippingDistrict__c.field-meta.xml
<CustomField>
    <fullName>ShippingDistrict__c</fullName>
    <label>Bairro (instalação)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>