org/force-app/main/default/objects/Account/fields/ShippingNeighborhood__c.field-meta.xml
<CustomField>
    <fullName>ShippingNeighborhood__c</fullName>
    <label>Bairro (Instalação)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>