org/force-app/main/default/objects/Account/fields/ShippingObservations__c.field-meta.xml
<CustomField>
    <fullName>ShippingObservations__c</fullName>
    <label>Observações endereço (Instalação)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>