org/force-app/main/default/objects/Account/fields/Status2__c.field-meta.xml
<CustomField>
    <fullName>Status2__c</fullName>
    <defaultValue>&apos;Ativo&apos;</defaultValue>
    <label>Status do cliente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ativo</fullName>
                <default>true</default>
                <label>Ativo</label>
            </value>
            <value>
                <fullName>Suspenso</fullName>
            </value>
            <value>
                <fullName>Inativo</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>